fixed logo alignment

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -330,6 +330,12 @@ body{
             width: 260px;
         }
     }
+
+    .logo{
+        margin-bottom: 70px;
+        margin-top: -20px;
+    }
+
     
 }
 
@@ -337,6 +343,10 @@ body{
     main{
         max-width: 1158px;
         margin: 0 auto;
+    }
+
+    .logo{
+        margin-bottom: 20px;
     }
 
 }
